--- a/css/style3.css
+++ b/css/style3.css
@@ -1005,6 +1005,7 @@ ol {
 ----------------------*/
 .footer-section {
 	background: #0d0d0d;
+
 }
 
 .footer-section h2 {
@@ -1017,8 +1018,10 @@ ol {
 .footer-section p {
 	font-size: 24px;
 	color: #fff;
-	margin-bottom: 40px;
+	/*margin-bottom: 40px;*/
 }
+
+
 
 .footer-section .social a {
 	color: #fff;
@@ -1662,6 +1665,14 @@ ol {
 		height: 400px;
 	}
 }
+
+/* #text{margin-top:600px;
+   }*/
+
+   #text{
+   	position: relative;
+   	top: 230px;
+   }
 
 /* small Mobile :320px. */
 @media only screen and (max-width: 479px) {
